# LAViG-FLOW-pub

./: LICENSE  README.md  environment.yaml  install_env.sh  paths.py  pyproject.toml
benchmarking/Fourier_MIONet/: README.md  model.py  train_Fourier_MIONet_dp.py  train_Fourier_MIONet_sg.py  train_dp.yaml  train_sg.yaml
benchmarking/benchmark_comparison/: config.yaml  eval_baselines.py
benchmarking/benchmarking_comparison/: README.md  timing_baselines.py
benchmarking/conv-fno/: README.md  conv_fno.py  lploss.py  train_ConvFNO_dp.py  train_ConvFNO_sg.py  train_dp.yaml  train_sg.yaml
benchmarking/fno/: README.md  fno.py  lploss.py  train_FNO_dp.py  train_FNO_sg.py  train_dp.yaml  train_sg.yaml
benchmarking/ufno/: README.md  lploss.py  train_UFNO_dp.py  train_UFNO_sg.py  train_dp.yaml  train_sg.yaml  ufno.py
benchmarking/vanilla_MIONet/: README.md  model.py  train_MIONet_vanilla_dp.py  train_MIONet_vanilla_sg.py  train_dp.yaml  train_sg.yaml
dockers/: lavig_flow.Dockerfile
gas_saturation_pressure_buildup_ditv/: README.md  attention.py  co2_and_dP_samples_visualization.py  co2_dataset_preparation.py  co2_evaluation_dataset_preparation.py  common_metrics_on_video_quality.py  dP_dataset_preparation.py  dP_evaluation_dataset_preparation.py  evaluate_autoregressive.py  joint.yaml  joint_autoreg.yaml  joint_dataset.py  joint_eval.yaml  joint_evaluation_dataset.py  multi_gpu_train_ditv.py  patch_embed.py  rf_scheduler.py  sample_ditv.py  transformer.py  transformer_layer.py  utils.py  vae.py  visualize_autoregressive_sample.py  vqvae.py
gas_saturation_pressure_buildup_ditv/slurm_files/: co2_and_dP_samples_visualization.slurm  co2_dataset_preparation.slurm  co2_evaluation_dataset_preparation.slurm  common_metrics_on_video_quality.slurm  dP_dataset_preparation.slurm  dP_evaluation_dataset_preparation.slurm  evaluate_autoregressive.slurm  multi_gpu_train_ditv.slurm  multi_gpu_train_ditv_fine_tuning.slurm  sample_ditv.slurm  sample_ditv_fine_tuning.slurm  visualize_autoregressive.slurm
gas_saturation_vqvae/: README.md  co2.yaml  co2_dataset.py  co2_dataset_preparation.py  dataset_reconstruction.py  lpips.py  test_dataset_reconstructions.py  training_dataset_reconstructions.py  training_vqvae.py  utils.py  validation_dataset_reconstructions.py
gas_saturation_vqvae/slurm_files/: co2_dataset_preparation.slurm  test_dataset_reconstructions.slurm  training_dataset_reconstructions.slurm  training_vqvae.slurm  validation_dataset_reconstructions.slurm
gas_saturation_vqvae/trained_models/: used_train_config.yaml
pressure_buildup_vae/: README.md  dP.yaml  dP_dataset.py  dP_dataset_preparation.py  dataset_reconstruction.py  test_dataset_reconstructions.py  training_dataset_reconstructions.py  training_vae.py  utils.py  vae.py  validation_dataset_reconstructions.py
pressure_buildup_vae/slurm_files/: dP_dataset_preparation.slurm  test_dataset_reconstructions.slurm  training_dataset_reconstructions.slurm  training_vae.slurm  validation_dataset_reconstructions.slurm
pressure_buildup_vae/trained_models/: used_train_config.yaml
stylegan-v-main/src/: README.md
(+21 files in other folders)
