[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lavig-flow"
authors = [
    {name = "Vittoria De Pellegrini", email = "vittoria.depellegrini@kaust.edu.sa"},
    {name = "Tariq Alkhalifah", email = "tariq.alkhalifah@kaust.edu.sa"},
]
description = "Latent Autoregressive Video Generation for Fluid Flow Simulations."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["latent space", "diffusion transformers", "progressive autoregressive video diffusion models", "rectified flow sampling", "fluid flow simulations"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
dependencies = [
    "accelerate==1.10.1",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "click==8.1.8",
    "exceptiongroup==1.3.0",
    "face-alignment==1.4.1",
    "filelock==3.19.1",
    "fsspec==2025.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.26.1",
    "hydra-core==1.3.2",
    "idna==3.11",
    "imageio==2.37.2",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "llvmlite==0.43.0",
    "lmdb==1.7.5",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numba==0.60.0",
    "numpy==2.0.2",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pip-chill==1.0.3",
    "proglog==0.1.12",
    "psutil==7.1.3",
    "pyparsing==3.2.5",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboardx==2.6.4",
    "tokenizers==0.19.1",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.44.2",
    "triton==3.4.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "zipp==3.23.0",
]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
    "black>=23.7",
    "mypy>=1.10",
    "pytest>=7.0",
    "ruff>=0.4",
]
